--- a/HardPc-Back/src/main/resources/application.properties
+++ b/HardPc-Back/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.security.user.name=admin
 spring.security.user.password=admin
 
-spring.jpa.hibernate.ddl-auto=create
+# Aca la BD no levanta el data.sql, por lo que hay que cargar los datos de prueba manualmente
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
